--- a/build
+++ b/build
@@ -1,6 +1,6 @@
 dep ensure
 CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o kube-mutating-webhook-tutorial .
-docker build --no-cache -t morvencao/sidecar-injector:v1 .
+docker build --no-cache -t quay.io/agreene/object-auditor:latest .
 rm -rf kube-mutating-webhook-tutorial
 
-docker push morvencao/sidecar-injector:v1
+docker push quay.io/agreene/object-auditor:latest
